src/syntax/snapshots/fury__syntax__grammar__ident_expr.snap
---
source: src/syntax/grammar.rs
expression: "test_output(\"fn foo() = bar;\")"
---
Root@0..15
  Fn@0..15
    FnKw@0..2 "fn"
    Whitespace@2..3 " "
    Ident@3..6 "foo"
    ParamList@6..8
      OpenParen@6..7 "("
      CloseParen@7..8 ")"
    Whitespace@8..9 " "
    Equal@9..10 "="
    Whitespace@10..11 " "
    ExprName@11..14
      Ident@11..14 "bar"
    Semi@14..15 ";"
