src/syntax/snapshots/fury__syntax__grammar__int_literal.snap
---
source: src/syntax/grammar.rs
expression: "test_output(\"fn foo() = -123;\")"
---
Root@0..16
  Fn@0..16
    FnKw@0..2 "fn"
    Whitespace@2..3 " "
    Ident@3..6 "foo"
    ParamList@6..8
      OpenParen@6..7 "("
      CloseParen@7..8 ")"
    Whitespace@8..9 " "
    Equal@9..10 "="
    Whitespace@10..11 " "
    ExprLiteral@11..15
      IntLiteral@11..15 "-123"
    Semi@15..16 ";"
