src/syntax/snapshots/fury__syntax__grammar__params_no_trailing.snap
---
source: src/syntax/grammar.rs
expression: "test_output(\"fn foo(x: Int, y: Bool) = true;\")"
---
Root@0..31
  Fn@0..31
    FnKw@0..2 "fn"
    Whitespace@2..3 " "
    Ident@3..6 "foo"
    ParamList@6..23
      OpenParen@6..7 "("
      Param@7..14
        Ident@7..8 "x"
        Colon@8..9 ":"
        Whitespace@9..10 " "
        TypeExpr@10..13
          Ident@10..13 "Int"
        Comma@13..14 ","
      Whitespace@14..15 " "
      Param@15..22
        Ident@15..16 "y"
        Colon@16..17 ":"
        Whitespace@17..18 " "
        TypeExpr@18..22
          Ident@18..22 "Bool"
      CloseParen@22..23 ")"
    Whitespace@23..24 " "
    Equal@24..25 "="
    Whitespace@25..26 " "
    ExprLiteral@26..30
      BoolLiteral@26..30 "true"
    Semi@30..31 ";"
